MET-5754 Cleanup quality issues